# semver-macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: mod.rs
